--- a/css/footer.css
+++ b/css/footer.css
@@ -14,3 +14,9 @@ footer .footer-logo img {
     width: 50px;
     height: 50px;
 }
+
+@media screen and (max-width: 1000px) {
+  footer .footer-logo {
+    display: none;
+  }
+}
