--- a/css/main.css
+++ b/css/main.css
@@ -441,6 +441,7 @@
     background-position: center;
     background-size: cover;
     min-height: 90vh;
+    background-attachment: unset;
   }
   #tentang-kami .tentang-kami-grid {
     grid-template-columns: 1fr;
