--- a/css/footer.css
+++ b/css/footer.css
@@ -3,14 +3,17 @@
 footer {
   padding-left: var(--padding-horizontal);
   padding-right: var(--padding-horizontal); 
-  padding-top: calc(var(--padding-vertical) / 2);
-  padding-bottom: calc(var(--padding-vertical) / 2);
+  padding-top: calc(var(--padding-vertical) / 4);
+  padding-bottom: calc(var(--padding-vertical) / 4);
   background-color: var(--color-light);
   display: flex;
   justify-content: space-between;   
   font-size: var(--body-size);
 }
 
+footer .footer-logo {
+  display: none;
+}
 footer .footer-logo img {
     width: 50px;
     height: 50px;
