--- a/css/main.css
+++ b/css/main.css
@@ -459,7 +459,7 @@
 .support-floating {
   position: fixed;
   border-radius: 5px;
-  z-index: 79;
+  z-index: 1;
   width: 35px;
   height: 35px;
   padding: 15px;
@@ -468,7 +468,7 @@
   place-items: center;
   right: var(--padding-horizontal);
   bottom: var(--padding-vertical);
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.794);
 }
 
 .support-floating img {
