--- a/css/loading.css
+++ b/css/loading.css
@@ -1,3 +1,4 @@
+@import url("style.css");
 #loading-screen {
   position: fixed;
   top: 0;
@@ -57,10 +58,9 @@
 }
 
 .loading-subtitle {
-  font-size: 14px;
-  margin-bottom: 40px;
-  opacity: 0.9;
-  font-weight: 300;
+  font-size: var(--body-size);
+  line-height: var(--body-line-height);
+  margin-bottom: var(--body-size);
 }
 
 .progress-container {
